# intuivo_Animation

backend/: .env  .env_cors  .gitignore  Cargo.toml  build.sh  compile.bash  ltest.sh  templatebackend  test.bash  test.sh  xclipit.bash  xtclipit.bash
backend/src/: main.rs
frontend/: .gitignore  biome.json  index.html  jsconfig.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  Layout.jsx  index.css  main.jsx
frontend/src/components/: FloatingCTA.jsx  ParallacDivider.jsx
frontend/src/components/dashboard/: QuickStats.jsx  RecentActivity.jsx  StatsCard.jsx
frontend/src/pages/: Dashboard.jsx  Index.jsx  Login.jsx  Register.jsx
frontend/src/sections/BlockSection/components/: BlogCard.jsx  BlogGrid.jsx
frontend/src/sections/BlogSection/: index.jsx
frontend/src/sections/BlogSection/components/: BlogContent.jsx
frontend/src/sections/Footer/: index.jsx
frontend/src/sections/Footer/components/: FooterColumns.jsx  FooterContact.jsx  FooterContent.jsx  FooterCopyright.jsx  FooterLogo.jsx  FooterMenu.jsx
frontend/src/sections/Header/: index.jsx
frontend/src/sections/Header/components/: HeaderOverLay.jsx  MobileMenueToggle.jsx  Navbar.jsx  NavbarContent.jsx  NavbarLinks.jsx
frontend/src/sections/Hero/: index.jsx
frontend/src/sections/Hero/components/: HeroContent.jsx  HeroDescription.jsx  HeroSection.jsx  HeroTitle.jsx
frontend/src/sections/ProjectsSections/: index.jsx
frontend/src/sections/ServicesSection/: index.jsx
frontend/src/utils/: index.js  validation.js
(+5 files in other folders)
