[package]
name = "templatebackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
simplelog = "0.12"
log = "0.4"
colored = "3.0"
syslog = "6.1"
env_logger = "0.10"
actix-cors = "0.7.1"
dotenvy = "0.15.7"

# Cargo.toml
[profile.release]
opt-level = "z"         # optimize for size
lto = "fat"            #  "thin" or "fat" for a tiny bit smaller, slower link
codegen-units = 1
panic = "abort"
strip = "symbols"       # Rust 1.70+

[profile.release.package."*"]
debug = false
